# claude-call

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.plans/: project-context.md  v0-context.md  v1-phases.md
config/: claude-call.toml
python/: requirements.txt  wake_backend.py
src/: actions.rs  cli.rs  config.rs  detector.rs  main.rs  policy.rs  runtime.rs
src/app/: actions.rs  config.rs  mod.rs  routing.rs  runtime.rs  transcript.rs
src/daemon/: control.rs
src/wake/: detector.rs  event.rs  mod.rs  policy.rs
