[package]
name = "claude-call"
version = "0.9.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.7"
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["net", "rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
